<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.addstory.AddStoryActivity">

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:indicatorColor="@color/primaryColor"
        app:indicatorSize="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16000003" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_add_story_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tambah_cerita_baru"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/iv_preview_image"
        android:gravity="center" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_preview_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/tv_add_story_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"
        tools:src="@drawable/ic_launcher_foreground" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_choose_from_gallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pilih_dari_galeri"
        android:icon="@drawable/ic_gallery"
        app:iconPadding="8dp"
        app:layout_constraintTop_toBottomOf="@id/iv_preview_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_take_from_camera"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_take_from_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ambil_dari_kamera"
        android:icon="@drawable/ic_camera"
        app:iconPadding="8dp"
        app:layout_constraintTop_toBottomOf="@id/iv_preview_image"
        app:layout_constraintStart_toEndOf="@id/btn_choose_from_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_add_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/deskripsi_cerita"
        app:layout_constraintTop_toBottomOf="@id/btn_choose_from_gallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_add_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="top" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tambah_cerita"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/til_add_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
